MDEV-10379: Failing assertion: xid_seqno > trx_sys_cur_xid_seqno

Remove too strict debug assertion.